--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,9 @@ exclude:
   - .gitignore
 header_pages:
   - sqlite.md
+pagenate: 5
 minima:
   date_format: "%Y-%m-%d"
+  twitter: takeshi_enomoto
+  github: tenomoto
+show_excerpts: true
